--- a/html/pag2.html
+++ b/html/pag2.html
@@ -13,10 +13,14 @@
 
 <body>
     <main class="container">
-        <div class="imagem"><img src="/imagens/tela1.svg" alt="personagem1"></div>
+        <div class="imagem"><img src="/imagens/tela2.svg" alt="personagem1"></div>
         <section class="textos">
-        <h1>Welcome</h1>
-        <p>thanks for participating in the pool</p>
+        <h1>Necessities of working in financial markets</h1>
+        <p>This reserch is to find the reasons for the failure of people in financial 
+            markets. the results of this survey will be emailed to you along withi 
+            the analysis of our experience 
+                   expects.
+        </p>
         <button><a href="pag2.html">Lets go</a></button>
     </section>
     </main>
