--- a/html/pag2.html
+++ b/html/pag2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/pagina1.css">
+    <link rel="stylesheet" href="/css/pagina2.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -21,7 +21,12 @@
             the analysis of our experience 
                    expects.
         </p>
-        <button><a href="pag2.html">Lets go</a></button>
+        <div class="botoes">
+        <button class="button2"><a href="pag1.html">Back to home</a></button>
+        <button>
+            <a href="pag3.html">Fill out form</a>
+        </button>
+    </div>
     </section>
     </main>
 </body>
